--- a/Doctor/Table.html
+++ b/Doctor/Table.html
@@ -11,6 +11,18 @@
         <form class="layui-form" action="">
             <div class="layui-form-item">
                 <div class="layui-form-item layui-inline">
+                    <label class="layui-form-label">姓名</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="doctorName" value="" placeholder="" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item layui-inline">
+                    <label class="layui-form-label">手机号</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="phoneNum" value="" placeholder="" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item layui-inline">
                     <button class="pear-btn pear-btn-md pear-btn-primary" lay-submit lay-filter="query">
                         <i class="layui-icon layui-icon-search"></i>
                         查询
@@ -49,11 +61,13 @@
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery','common'], function() {
+    layui.use(['table', 'form', 'jquery','common','context'], function() {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
         let common = layui.common;
+        const context = layui.context;
+
 
         let MODULE_PATH = "operate/";
 
@@ -94,7 +108,7 @@
                 },
                 {
                     title: '手机号码',
-                    field: 'phonenum',
+                    field: 'phoneNum',
                     align: 'center',
                 },
                 {
@@ -148,7 +162,10 @@
 
         form.on('submit(query)', function(data) {
             table.reload('doctor-table', {
-                where: data.field
+                where: {
+                    doctorName:data.field.doctorName,
+                    phoneNum:data.field.phoneNum
+                }
             })
             return false;
         });
@@ -172,6 +189,7 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
+            context.put("DoctorId",obj.data['id'])
         }
 
         window.remove = function(obj) {
@@ -188,14 +206,14 @@
                     success: function(result) {
                         layer.close(loading);
                         if (result.success) {
-                            layer.msg(result.msg, {
+                            layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
                             }, function() {
                                 obj.del();
                             });
                         } else {
-                            layer.msg(result.msg, {
+                            layer.msg(result.message, {
                                 icon: 2,
                                 time: 1000
                             });
@@ -230,14 +248,14 @@
                     success: function(result) {
                         layer.close(loading);
                         if (result.success) {
-                            layer.msg(result.msg, {
+                            layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
                             }, function() {
                                 table.reload('doctor-table');
                             });
                         } else {
-                            layer.msg(result.msg, {
+                            layer.msg(result.message, {
                                 icon: 2,
                                 time: 1000
                             });
