--- a/Doctor/edit.html
+++ b/Doctor/edit.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" />
 </head>
 <body>
-<form class="layui-form" action="">
+<form class="layui-form" action="" lay-filter="Update">
     <div class="mainBox">
         <div class="main-container">
             <div class="main-container">
-
-                <div class="layui-form-item">
-                    <label class="layui-form-label">姓名</label>
+                <div class="layui-form-item" hidden>
+                    <label class="layui-form-label required">ID</label>
                     <div class="layui-input-block">
-                        <input type="text" name="doctorName" required lay-verify="required" autocomplete="off" placeholder="请输入姓名" class="layui-input">
+                        <input type="hidden" name="id" class="layui-input">
                     </div>
                 </div>
-
                 <div class="layui-form-item">
                     <label class="layui-form-label">科室</label>
                     <div class="layui-input-block">
@@ -25,55 +23,33 @@
                             <option></option>
                         </select>
                     </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">电话</label>
+                    <div class="layui-input-block">
+                        <input type="text"  name="phoneNum" required lay-verify="required" autocomplete="off" placeholder="请输入手机号" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">挂号金额</label>
+                    <div class="layui-input-block">
+                        <input type="text"  name="registeredPrice" required lay-verify="required" autocomplete="off" placeholder="请输入挂号金额" class="layui-input">
+                    </div>
+                </div>
 
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">年龄</label>
-                        <div class="layui-input-block">
-                            <input type="text"  name="age" required lay-verify="required" autocomplete="off" placeholder="请输入年龄" class="layui-input">
-                        </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">状态</label>
+                    <div class="layui-input-block">
+                        <input type="radio" name="status" value="0" title="正常" checked>
+                        <input type="radio" name="status" value="1" title="休假">
                     </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">电话</label>
-                        <div class="layui-input-block">
-                            <input type="text"  name="phonenum" required lay-verify="required" autocomplete="off" placeholder="请输入手机号" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">密码</label>
-                        <div class="layui-input-block">
-                            <input type="password" name="password" required lay-verify="required" autocomplete="off" placeholder="请输入密码" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">挂号金额</label>
-                        <div class="layui-input-block">
-                            <input type="text"  name="registeredPrice" required lay-verify="required" autocomplete="off" placeholder="请输入挂号金额" class="layui-input">
-                        </div>
-                    </div>
-
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">状态</label>
-                        <div class="layui-input-block">
-                            <input type="radio" name="status" value="0" title="正常" checked>
-                            <input type="radio" name="status" value="1" title="休假">
-                        </div>
-                    </div>
-
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">性别</label>
-                        <div class="layui-input-block">
-                            <input type="radio" name="sex" value="0" title="男">
-                            <input type="radio" name="sex" value="1" title="女" checked>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
     <div class="bottom">
         <div class="button-container">
-            <button type="submit" class="pear-btn pear-btn-primary pear-btn-sm" lay-submit="" lay-filter="save">
+            <button type="submit" class="pear-btn pear-btn-primary pear-btn-sm" lay-submit="" lay-filter="user-save">
                 <i class="layui-icon layui-icon-ok"></i>
                 提交
             </button>
@@ -87,22 +63,41 @@
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['form','jquery'],function(){
+    layui.use(['form','jquery','context'],function(){
         let form = layui.form;
+        const context = layui.context;
         let $ = layui.jquery;
 
-        form.on('submit(save)', function(data){
+        $.ajax({
+            url: 'https://localhost:7283/v1/api/Doctor/' + context.get("DoctorId"),
+            type: 'get',
+            success:function (result){
+                if (result.success){
+                    form.val("Update",{
+                        "id":result.data.id,
+                        "phoneNum":result.data.phoneNum,
+                        "registeredPrice":result.data.registeredPrice,
+                        "status":result.data.status
+                    });
+                }
+            }
+        })
+
+        form.on('submit(user-save)', function(data){
             $.ajax({
-                url:'https://localhost:7283/v1/api/Doctor',
-                data:JSON.stringify(data.field),
+                url:'https://localhost:7283/v1/api/Doctor/' + context.get("DoctorId")
+                    + '?departmentId=' + data.field.departmentId
+                    + '&status=' + data.field.status
+                    + '&registeredPrice=' + data.field.registeredPrice
+                    + '&phoneNum=' + data.field.phoneNum,
+                contentType: "application/x-www-form-urlencoded",
                 dataType:'json',
-                contentType:'application/json',
-                type:'post',
+                type:'patch',
                 success:function(result){
                     if(result.success){
-                        layer.msg(result.msg,{icon:1,time:1000},function(){
+                        layer.msg(result.message,{icon:1,time:1000},function(){
                             parent.layer.close(parent.layer.getFrameIndex(window.name));//关闭当前页
-                            parent.layui.table.reload("doctor-table");
+                            parent.layui.table.reload("user-table");
                         });
                     }else{
                         layer.msg(result.msg,{icon:2,time:1000});
