--- a/Doctor/Table.html
+++ b/Doctor/Table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>医生管理</title>
-    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" />
+    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css"/>
 </head>
 <body class="pear-container">
 <div class="layui-card">
@@ -38,7 +38,7 @@
 </div>
 <div class="layui-card">
     <div class="layui-card-body">
-        <table id="doctor-table" lay-filter="doctor-table"></table>
+        <table id="base-table" lay-filter="base-table"></table>
     </div>
 </div>
 
@@ -54,14 +54,16 @@
 </script>
 
 <script type="text/html" id="leftbar">
-    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i></button>
-    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">删除<i class="layui-icon layui-icon-delete"></i></button>
+    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i>
+    </button>
+    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">删除<i
+            class="layui-icon layui-icon-delete"></i></button>
 </script>
 
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery','common','context'], function() {
+    layui.use(['table', 'form', 'jquery', 'common', 'context'], function () {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
@@ -116,7 +118,8 @@
                     field: 'createtime',
                     align: 'center',
                 },
-                { title: "操作",
+                {
+                    title: "操作",
                     minWidth: 100,
                     templet: "#leftbar",
                     align: "center"
@@ -125,7 +128,7 @@
         ]
 
         table.render({
-            elem: '#doctor-table',
+            elem: '#base-table',
             url: 'https://localhost:7283/v1/api/Doctor',
             response: {
                 statusCode: 200, //规定成功的状态码，默认：0
@@ -142,7 +145,7 @@
             }, 'filter', 'print', 'exports']
         });
 
-        table.on('tool(doctor-table)', function(obj) {
+        table.on('tool(base-table)', function (obj) {
             if (obj.event === 'remove') {
                 window.remove(obj);
             } else if (obj.event === 'edit') {
@@ -150,7 +153,7 @@
             }
         });
 
-        table.on('toolbar(doctor-table)', function(obj) {
+        table.on('toolbar(base-table)', function (obj) {
             if (obj.event === 'add') {
                 window.add();
             } else if (obj.event === 'refresh') {
@@ -160,28 +163,28 @@
             }
         });
 
-        form.on('submit(query)', function(data) {
-            table.reload('doctor-table', {
+        form.on('submit(query)', function (data) {
+            table.reload('base-table', {
                 where: {
-                    doctorName:data.field.doctorName,
-                    phoneNum:data.field.phoneNum
+                    doctorName: data.field.doctorName,
+                    phoneNum: data.field.phoneNum
                 }
             })
             return false;
         });
 
 
-        window.add = function() {
+        window.add = function () {
             layer.open({
                 type: 2,
                 title: '新增',
                 shade: 0.1,
-                area: [common.isModile()?'100%':'500px', common.isModile()?'100%':'400px'],
+                area: [common.isModile() ? '100%' : '500px', common.isModile() ? '100%' : '400px'],
                 content: 'add.html'
             });
         }
 
-        window.edit = function(obj) {
+        window.edit = function (obj) {
             layer.open({
                 type: 2,
                 title: '修改',
@@ -189,27 +192,27 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
-            context.put("DoctorId",obj.data['id'])
+            context.put("DoctorId", obj.data['id'])
         }
 
-        window.remove = function(obj) {
+        window.remove = function (obj) {
             layer.confirm('确定要删除该用户', {
                 icon: 3,
                 title: '提示'
-            }, function(index) {
+            }, function (index) {
                 layer.close(index);
                 let loading = layer.load();
                 $.ajax({
                     url: 'https://localhost:7283/v1/api/Doctor/' + obj.data['id'],
                     dataType: 'json',
                     type: 'delete',
-                    success: function(result) {
+                    success: function (result) {
                         layer.close(loading);
                         if (result.success) {
                             layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
-                            }, function() {
+                            }, function () {
                                 obj.del();
                             });
                         } else {
@@ -223,9 +226,9 @@
             });
         }
 
-        window.batchRemove = function(obj) {
+        window.batchRemove = function (obj) {
 
-            var checkIds = common.checkField(obj,'id');
+            var checkIds = common.checkField(obj, 'id');
 
             if (checkIds === "") {
                 layer.msg("未选中数据", {
@@ -238,21 +241,21 @@
             layer.confirm('确定要删除这些用户', {
                 icon: 3,
                 title: '提示'
-            }, function(index) {
+            }, function (index) {
                 layer.close(index);
                 let loading = layer.load();
                 $.ajax({
                     url: MODULE_PATH + "batchRemove/" + ids,
                     dataType: 'json',
                     type: 'delete',
-                    success: function(result) {
+                    success: function (result) {
                         layer.close(loading);
                         if (result.success) {
                             layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
-                            }, function() {
-                                table.reload('doctor-table');
+                            }, function () {
+                                table.reload('base-table');
                             });
                         } else {
                             layer.msg(result.message, {
@@ -265,8 +268,8 @@
             });
         }
 
-        window.refresh = function(param) {
-            table.reload('doctor-table');
+        window.refresh = function (param) {
+            table.reload('base-table');
         }
     })
 </script>
