--- a/Doctor/edit.html
+++ b/Doctor/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" />
+    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css"/>
 </head>
 <body>
 <form class="layui-form" action="" lay-filter="Update">
@@ -27,13 +27,15 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">电话</label>
                     <div class="layui-input-block">
-                        <input type="text"  name="phoneNum" required lay-verify="required" autocomplete="off" placeholder="请输入手机号" class="layui-input">
+                        <input type="text" name="phoneNum" required lay-verify="required" autocomplete="off"
+                               placeholder="请输入手机号" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">挂号金额</label>
                     <div class="layui-input-block">
-                        <input type="text"  name="registeredPrice" required lay-verify="required" autocomplete="off" placeholder="请输入挂号金额" class="layui-input">
+                        <input type="text" name="registeredPrice" required lay-verify="required" autocomplete="off"
+                               placeholder="请输入挂号金额" class="layui-input">
                     </div>
                 </div>
 
@@ -63,7 +65,7 @@
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['form','jquery','context'],function(){
+    layui.use(['form', 'jquery', 'context'], function () {
         let form = layui.form;
         const context = layui.context;
         let $ = layui.jquery;
@@ -71,36 +73,36 @@
         $.ajax({
             url: 'https://localhost:7283/v1/api/Doctor/' + context.get("DoctorId"),
             type: 'get',
-            success:function (result){
-                if (result.success){
-                    form.val("Update",{
-                        "id":result.data.id,
-                        "phoneNum":result.data.phoneNum,
-                        "registeredPrice":result.data.registeredPrice,
-                        "status":result.data.status
+            success: function (result) {
+                if (result.success) {
+                    form.val("Update", {
+                        "id": result.data.id,
+                        "phoneNum": result.data.phoneNum,
+                        "registeredPrice": result.data.registeredPrice,
+                        "status": result.data.status
                     });
                 }
             }
         })
 
-        form.on('submit(user-save)', function(data){
+        form.on('submit(user-save)', function (data) {
             $.ajax({
-                url:'https://localhost:7283/v1/api/Doctor/' + context.get("DoctorId")
+                url: 'https://localhost:7283/v1/api/Doctor/' + context.get("DoctorId")
                     + '?departmentId=' + data.field.departmentId
                     + '&status=' + data.field.status
                     + '&registeredPrice=' + data.field.registeredPrice
                     + '&phoneNum=' + data.field.phoneNum,
                 contentType: "application/x-www-form-urlencoded",
-                dataType:'json',
-                type:'patch',
-                success:function(result){
-                    if(result.success){
-                        layer.msg(result.message,{icon:1,time:1000},function(){
+                dataType: 'json',
+                type: 'patch',
+                success: function (result) {
+                    if (result.success) {
+                        layer.msg(result.message, {icon: 1, time: 1000}, function () {
                             parent.layer.close(parent.layer.getFrameIndex(window.name));//关闭当前页
                             parent.layui.table.reload("user-table");
                         });
-                    }else{
-                        layer.msg(result.msg,{icon:2,time:1000});
+                    } else {
+                        layer.msg(result.msg, {icon: 2, time: 1000});
                     }
                 }
             })
