--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -38,7 +38,7 @@
 </div>
 <div class="layui-card">
     <div class="layui-card-body">
-        <table id="doctor-table" lay-filter="doctor-table"></table>
+        <table id="base-table" lay-filter="base-table"></table>
     </div>
 </div>
 
@@ -126,7 +126,7 @@
         ]
 
         table.render({
-            elem: '#doctor-table',
+            elem: '#base-table',
             url: 'https://localhost:7283/v1/api/Doctor',
             response: {
                 statusCode: 200, //规定成功的状态码，默认：0
@@ -143,7 +143,7 @@
             }, 'filter', 'print', 'exports']
         });
 
-        table.on('tool(doctor-table)', function(obj) {
+        table.on('tool(base-table)', function(obj) {
             if (obj.event === 'remove') {
                 window.remove(obj);
             } else if (obj.event === 'edit') {
@@ -151,7 +151,7 @@
             }
         });
 
-        table.on('toolbar(doctor-table)', function(obj) {
+        table.on('toolbar(base-table)', function(obj) {
             if (obj.event === 'add') {
                 window.add();
             } else if (obj.event === 'refresh') {
@@ -162,7 +162,7 @@
         });
 
         form.on('submit(query)', function(data) {
-            table.reload('doctor-table', {
+            table.reload('base-table', {
                 where: {
                     doctorName:data.field.doctorName,
                     phoneNum:data.field.phoneNum
@@ -253,7 +253,7 @@
                                 icon: 1,
                                 time: 1000
                             }, function() {
-                                table.reload('doctor-table');
+                                table.reload('base-table');
                             });
                         } else {
                             layer.msg(result.message, {
@@ -267,7 +267,7 @@
         }
 
         window.refresh = function(param) {
-            table.reload('doctor-table');
+            table.reload('base-table');
         }
     })
 </script>
