--- a/Role/Table.html
+++ b/Role/Table.html
@@ -38,7 +38,7 @@
 </div>
 <div class="layui-card">
     <div class="layui-card-body">
-        <table id="role-table" lay-filter="role-table"></table>
+        <table id="base-table" lay-filter="base-table"></table>
     </div>
 </div>
 
@@ -115,7 +115,7 @@
         ]
 
         table.render({
-            elem: '#role-table',
+            elem: '#base-table',
             url: 'https://localhost:7283/v1/api/Role',
             response: {
                 statusCode: 200, //规定成功的状态码，默认：0
@@ -132,7 +132,7 @@
             }, 'filter', 'print', 'exports']
         });
 
-        table.on('tool(role-table)', function(obj) {
+        table.on('tool(base-table)', function(obj) {
             if (obj.event === 'remove') {
                 window.remove(obj);
             } else if (obj.event === 'edit') {
@@ -140,7 +140,7 @@
             }
         });
 
-        table.on('toolbar(role-table)', function(obj) {
+        table.on('toolbar(base-table)', function(obj) {
             if (obj.event === 'add') {
                 window.add();
             } else if (obj.event === 'refresh') {
@@ -151,7 +151,7 @@
         });
 
         form.on('submit(query)', function(data) {
-            table.reload('role-table', {
+            table.reload('base-table', {
                 where: {
                     roleName:data.field.roleName,
                 }
@@ -241,7 +241,7 @@
                                 icon: 1,
                                 time: 1000
                             }, function() {
-                                table.reload('role-table');
+                                table.reload('base-table');
                             });
                         } else {
                             layer.msg(result.message, {
@@ -255,7 +255,7 @@
         }
 
         window.refresh = function(param) {
-            table.reload('role-table');
+            table.reload('base-table');
         }
     })
 </script>
