--- a/Manufacturer/add.html
+++ b/Manufacturer/add.html
@@ -30,7 +30,7 @@
                         <input type="text"  name="phoneNum" required lay-verify="required" autocomplete="off" placeholder="请输入手机号" class="layui-input">
                     </div>
                 </div>
-             
+
                 <div class="layui-form-item">
                     <label class="layui-form-label">状态</label>
                     <div class="layui-input-block">
@@ -72,12 +72,12 @@
                 type:'post',
                 success:function(result){
                     if(result.success){
-                        layer.msg(result.msg,{icon:1,time:1000},function(){
+                        layer.msg(result.message,{icon:1,time:1000},function(){
                             parent.layer.close(parent.layer.getFrameIndex(window.name));//关闭当前页
-                            parent.layui.table.reload("doctor-table");
+                            parent.layui.table.reload("base-table");
                         });
                     }else{
-                        layer.msg(result.msg,{icon:2,time:1000});
+                        layer.msg(result.message,{icon:2,time:1000});
                     }
                 }
             })
