--- a/Patient/add.html
+++ b/Patient/add.html
@@ -94,7 +94,7 @@
                     if(result.success){
                         layer.msg(result.msg,{icon:1,time:1000},function(){
                             parent.layer.close(parent.layer.getFrameIndex(window.name));//关闭当前页
-                            parent.layui.table.reload("doctor-table");
+                            parent.layui.table.reload("base-table");
                         });
                     }else{
                         layer.msg(result.msg,{icon:2,time:1000});
