--- a/Role/edit.html
+++ b/Role/edit.html
@@ -70,8 +70,7 @@
         form.on('submit(user-save)', function(data){
             $.ajax({
                 url:'https://localhost:7283/v1/api/Role/' + context.get("RoleId")
-                    + '?roleId=' + data.field.roleId
-                    + '&description=' + data.field.description
+                    + '?description=' + data.field.description
                     + '&authority=' + data.field.authority,
                 contentType: "application/x-www-form-urlencoded",
                 dataType:'json',
@@ -80,7 +79,7 @@
                     if(result.success){
                         layer.msg(result.message,{icon:1,time:1000},function(){
                             parent.layer.close(parent.layer.getFrameIndex(window.name));//关闭当前页
-                            parent.layui.table.reload("user-table");
+                            parent.layui.table.reload("base-table");
                         });
                     }else{
                         layer.msg(result.msg,{icon:2,time:1000});
