--- a/Manufacturer/table.html
+++ b/Manufacturer/table.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>医生管理</title>
+    <title>制造商管理</title>
     <link href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" rel="stylesheet" />
 </head>
 <body class="pear-container">
