--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>医生管理</title>
+    <title>患者管理</title>
     <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" />
 </head>
 <body class="pear-container">
