--- a/Doctor/add.html
+++ b/Doctor/add.html
@@ -26,6 +26,7 @@
                             <option></option>
                         </select>
                     </div>
+                </div>
 
                     <div class="layui-form-item">
                         <label class="layui-form-label">年龄</label>
