--- a/Menu/Table.html
+++ b/Menu/Table.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>科室管理</title>
-    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css"/>
+    <title>菜单管理</title>
+    <link rel="stylesheet" href="../Pear-Admin-Layui-3.9.2/component/pear/css/pear.css" />
 </head>
 <body class="pear-container">
 <div class="layui-card">
@@ -11,15 +11,9 @@
         <form class="layui-form" action="">
             <div class="layui-form-item">
                 <div class="layui-form-item layui-inline">
-                    <label class="layui-form-label">科室名称</label>
+                    <label class="layui-form-label">标题</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="departmentName" value="" placeholder="" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item layui-inline">
-                    <label class="layui-form-label">科室状态</label>
-                    <div class="layui-input-inline">
-                        <input type="text" name="status" value="" placeholder="" class="layui-input">
+                        <input type="text" name="patientName" value="" placeholder="" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item layui-inline">
@@ -54,16 +48,14 @@
 </script>
 
 <script type="text/html" id="leftbar">
-    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i>
-    </button>
-    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">删除<i
-            class="layui-icon layui-icon-delete"></i></button>
+    <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">修改<i class="layui-icon layui-icon-edit"></i></button>
+    <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">删除<i class="layui-icon layui-icon-delete"></i></button>
 </script>
 
 <script src="../Pear-Admin-Layui-3.9.2/component/layui/layui.js"></script>
 <script src="../Pear-Admin-Layui-3.9.2/component/pear/pear.js"></script>
 <script>
-    layui.use(['table', 'form', 'jquery', 'common', 'context'], function () {
+    layui.use(['table', 'form', 'jquery','common','context'], function() {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
@@ -78,38 +70,47 @@
                 type: 'checkbox'
             },
                 {
-                    title: 'id',
+                    title: 'ID',
                     field: 'id',
                     align: 'center',
                     hide: true
                 },
                 {
-                    title: '科室名称',
-                    field: 'departmentName',
+                    title: '父级菜单',
+                    field: 'parentId',
                     align: 'center',
                 },
                 {
-                    title: '科室主管',
-                    field: 'leaderId',
+                    title: '标题',
+                    field: 'title',
                     align: 'center',
                 },
                 {
-                    title: '挂号数',
-                    field: 'count',
+                    title: '类型',
+                    field: 'type',
+                    align: 'center',
+                },
+                {
+                    title: '图标',
+                    field: 'icon',
                     align: 'center'
                 },
                 {
-                    title: '科室状态',
-                    field: 'status',
+                    title: '排序',
+                    field: 'sort',
                     align: 'center',
                 },
                 {
-                    title: '创建时间',
-                    field: 'createtime',
+                    title: '链接',
+                    field: 'href',
                     align: 'center',
                 },
                 {
-                    title: "操作",
+                    title: '开启类型',
+                    field: 'opentype',
+                    align: 'center',
+                },
+                { title: "操作",
                     minWidth: 100,
                     templet: "#leftbar",
                     align: "center"
@@ -119,7 +120,7 @@
 
         table.render({
             elem: '#base-table',
-            url: 'https://localhost:7283/v1/api/Department',
+            url: 'https://localhost:7283/v1/api/Menu',
             response: {
                 statusCode: 200, //规定成功的状态码，默认：0
                 msgName: 'message'
@@ -135,7 +136,7 @@
             }, 'filter', 'print', 'exports']
         });
 
-        table.on('tool(base-table)', function (obj) {
+        table.on('tool(base-table)', function(obj) {
             if (obj.event === 'remove') {
                 window.remove(obj);
             } else if (obj.event === 'edit') {
@@ -143,7 +144,7 @@
             }
         });
 
-        table.on('toolbar(base-table)', function (obj) {
+        table.on('toolbar(base-table)', function(obj) {
             if (obj.event === 'add') {
                 window.add();
             } else if (obj.event === 'refresh') {
@@ -153,27 +154,27 @@
             }
         });
 
-        form.on('submit(query)', function (data) {
+        form.on('submit(query)', function(data) {
             table.reload('base-table', {
                 where: {
-                    departmentName: data.field.departmentName
+                    title:data.field.title
                 }
             })
             return false;
         });
 
 
-        window.add = function () {
+        window.add = function() {
             layer.open({
                 type: 2,
                 title: '新增',
                 shade: 0.1,
-                area: [common.isModile() ? '100%' : '500px', common.isModile() ? '100%' : '400px'],
+                area: [common.isModile()?'100%':'500px', common.isModile()?'100%':'400px'],
                 content: 'add.html'
             });
         }
 
-        window.edit = function (obj) {
+        window.edit = function(obj) {
             layer.open({
                 type: 2,
                 title: '修改',
@@ -181,27 +182,27 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
-            context.put("DepartmentId", obj.data['id'])
+            context.put("MenuId",obj.data['id'])
         }
 
-        window.remove = function (obj) {
-            layer.confirm('确定要删除该科室', {
+        window.remove = function(obj) {
+            layer.confirm('确定要删除该用户', {
                 icon: 3,
                 title: '提示'
-            }, function (index) {
+            }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
                 $.ajax({
-                    url: 'https://localhost:7283/v1/api/Department/' + obj.data['id'],
+                    url: 'https://localhost:7283/v1/api/Menu/' + obj.data['id'],
                     dataType: 'json',
                     type: 'delete',
-                    success: function (result) {
+                    success: function(result) {
                         layer.close(loading);
                         if (result.success) {
                             layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
-                            }, function () {
+                            }, function() {
                                 obj.del();
                             });
                         } else {
@@ -215,9 +216,9 @@
             });
         }
 
-        window.batchRemove = function (obj) {
+        window.batchRemove = function(obj) {
 
-            var checkIds = common.checkField(obj, 'id');
+            var checkIds = common.checkField(obj,'id');
 
             if (checkIds === "") {
                 layer.msg("未选中数据", {
@@ -227,23 +228,23 @@
                 return false;
             }
 
-            layer.confirm('确定要删除这些科室', {
+            layer.confirm('确定要删除这些用户', {
                 icon: 3,
                 title: '提示'
-            }, function (index) {
+            }, function(index) {
                 layer.close(index);
                 let loading = layer.load();
                 $.ajax({
                     url: MODULE_PATH + "batchRemove/" + ids,
                     dataType: 'json',
                     type: 'delete',
-                    success: function (result) {
+                    success: function(result) {
                         layer.close(loading);
                         if (result.success) {
                             layer.msg(result.message, {
                                 icon: 1,
                                 time: 1000
-                            }, function () {
+                            }, function() {
                                 table.reload('base-table');
                             });
                         } else {
@@ -257,7 +258,7 @@
             });
         }
 
-        window.refresh = function (param) {
+        window.refresh = function(param) {
             table.reload('base-table');
         }
     })
