--- a/Drugstorage/add.html
+++ b/Drugstorage/add.html
@@ -14,7 +14,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">药品Id</label>
                     <div class="layui-input-block">
-                        <select id="departmentSelect" name="drugId" lay-filter="drugId">
+                        <select id="drugSelect" lay-filter="drugId" name="drugId">
                             <option></option>
                         </select>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">厂家Id</label>
                     <div class="layui-input-block">
-                        <select id="departmentSelect" name="manufacturerId" lay-filter="manufacturerId">
+                        <select id="manufacturerSelect" lay-filter="manufacturerId" name="manufacturerId">
                             <option></option>
                         </select>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">入库人Id</label>
                     <div class="layui-input-block">
-                        <select id="departmentSelect" name="operatorId" lay-filter="operatorId">
+                        <select id="operatorSelect" lay-filter="operatorId" name="operatorId">
                             <option></option>
                         </select>
                     </div>
