--- a/Role/edit.html
+++ b/Role/edit.html
@@ -82,7 +82,7 @@
                             parent.layui.table.reload("base-table");
                         });
                     }else{
-                        layer.msg(result.msg,{icon:2,time:1000});
+                        layer.msg(result.message,{icon:2,time:1000});
                     }
                 }
             })
