--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -127,7 +127,7 @@
 
         table.render({
             elem: '#base-table',
-            url: 'https://localhost:7283/v1/api/Doctor',
+            url: 'https://localhost:7283/v1/api/Patient',
             response: {
                 statusCode: 200, //规定成功的状态码，默认：0
                 msgName: 'message'
