--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -89,7 +89,7 @@
                 },
                 {
                     title: '患者姓名',
-                    field: 'doctorName',
+                    field: 'patientName',
                     align: 'center',
                 },
                 {
@@ -164,7 +164,7 @@
         form.on('submit(query)', function(data) {
             table.reload('base-table', {
                 where: {
-                    doctorName:data.field.doctorName,
+                    patientName:data.field.patientName,
                     phoneNum:data.field.phoneNum
                 }
             })
@@ -201,7 +201,7 @@
                 layer.close(index);
                 let loading = layer.load();
                 $.ajax({
-                    url: 'https://localhost:7283/v1/api/Doctor/' + obj.data['id'],
+                    url: 'https://localhost:7283/v1/api/Patient/' + obj.data['id'],
                     dataType: 'json',
                     type: 'delete',
                     success: function(result) {
