--- a/Patient/add.html
+++ b/Patient/add.html
@@ -84,7 +84,7 @@
 
         form.on('submit(save)', function(data){
             $.ajax({
-                url:'https://localhost:7283/v1/api/Doctor',
+                url:'https://localhost:7283/v1/api/Patient',
                 data:JSON.stringify(data.field),
                 dataType:'json',
                 contentType:'application/json',
