--- a/Department/add.html
+++ b/Department/add.html
@@ -28,40 +28,11 @@
                         </select>
                     </div>
 
-                    <!-- <div class="layui-form-item">
-                        <label class="layui-form-label">年龄</label>
-                        <div class="layui-input-block">
-                            <input type="text" name="age" required lay-verify="required" autocomplete="off"
-                                   placeholder="请输入年龄" class="layui-input">
-                        </div>
-                    </div> -->
-                    <!-- <div class="layui-form-item">
-                        <label class="layui-form-label">电话</label>
-                        <div class="layui-input-block">
-                            <input type="text" name="phoneNum" required lay-verify="required" autocomplete="off"
-                                   placeholder="请输入手机号" class="layui-input">
-                        </div>
-                    </div> -->
-                    <!-- <div class="layui-form-item">
-                        <label class="layui-form-label">密码</label>
-                        <div class="layui-input-block">
-                            <input type="password" name="password" required lay-verify="required" autocomplete="off"
-                                   placeholder="请输入密码" class="layui-input">
-                        </div>
-                    </div> -->
-                    <!-- <div class="layui-form-item">
-                        <label class="layui-form-label">挂号金额</label>
-                        <div class="layui-input-block">
-                            <input type="text" name="registeredPrice" required lay-verify="required" autocomplete="off"
-                                   placeholder="请输入挂号金额" class="layui-input">
-                        </div>
-                    </div> -->
-
                     <div class="layui-form-item">
                         <label class="layui-form-label">科室状态</label>
                         <div class="layui-input-block">
-                            <input type="radio" name="status" value="0" title="正常" checked>
-                            <input type="radio" name="status" value="1" title="休假">
+                            <input checked name="status" title="关闭" type="radio" value="0">
+                            <input name="status" title="开启" type="radio" value="1">
                         </div>
                     </div>
 
