--- a/Doctor/Table.html
+++ b/Doctor/Table.html
@@ -238,7 +238,7 @@
                 return false;
             }
 
-            layer.confirm('确定要删除这些用户', {
+            layer.confirm('确定要删除这些医生信息？', {
                 icon: 3,
                 title: '提示'
             }, function (index) {
