--- a/Drugstorage/Table.html
+++ b/Drugstorage/Table.html
@@ -226,7 +226,7 @@
                 return false;
             }
 
-            layer.confirm('确定要删除这些用户', {
+            layer.confirm('确定要删除这些药品库存？', {
                 icon: 3,
                 title: '提示'
             }, function (index) {
