--- a/Manufacturer/Table.html
+++ b/Manufacturer/Table.html
@@ -220,7 +220,7 @@
                 return false;
             }
 
-            layer.confirm('确定要删除这些用户', {
+            layer.confirm('确定要删除这些制造商？', {
                 icon: 3,
                 title: '提示'
             }, function(index) {
