--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -236,7 +236,7 @@
                 return false;
             }
 
-            layer.confirm('确定要删除这些用户', {
+            layer.confirm('确定要删除这些患者信息？', {
                 icon: 3,
                 title: '提示'
             }, function(index) {
