患者接口修改

--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -190,7 +190,7 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
-            context.put("DoctorId",obj.data['id'])
+            context.put("PatientId",obj.data['id'])
         }
 
         window.remove = function(obj) {
