--- a/Department/add.html
+++ b/Department/add.html
@@ -31,8 +31,8 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">科室状态</label>
                         <div class="layui-input-block">
-                            <input checked name="status" title="关闭" type="radio" value="0">
-                            <input name="status" title="开启" type="radio" value="1">
+                            <input checked name="status" title="开启" type="radio" value="0">
+                            <input name="status" title="关闭" type="radio" value="1">
                         </div>
                     </div>
 
