添加医生表 科室列

--- a/Doctor/Table.html
+++ b/Doctor/Table.html
@@ -97,6 +97,10 @@
                     title: '性别',
                     field: 'sex',
                     align: 'center'
+                },{
+                    title: '科室',
+                    field: 'departmentId',
+                    align: 'center'
                 },
                 {
                     title: '状态',
