--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -83,7 +83,7 @@
                 },
                 {
                     title: '病房编号',
-                    field: 'WardId',
+                    field: 'wardId',
                     align: 'center',
                     hide: true
                 },
@@ -109,7 +109,7 @@
                 },
                 {
                     title: '手机号码',
-                    field: 'phoneNum',
+                    field: 'phonenum',
                     align: 'center',
                 },
                 {
@@ -190,7 +190,7 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
-            context.put("PatientId",obj.data['id'])
+            context.put("patientId",obj.data['id'])
         }
 
         window.remove = function(obj) {
