--- a/Menu/Table.html
+++ b/Menu/Table.html
@@ -77,7 +77,7 @@
                 },
                 {
                     title: '父级菜单',
-                    field: 'parentId',
+                    field: 'parentTitle',
                     align: 'center',
                 },
                 {
