修改Role表权限fieid错误

--- a/Role/Table.html
+++ b/Role/Table.html
@@ -93,8 +93,8 @@
                 },
                 {
                     title: '权限',
-                    field: 'sex',
-                    align: 'authority'
+                    field: 'authority',
+                    align: 'ceter',
                 },
                 {
                     title: '排序',
